# NoodleOS

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
env/: Dockerfile  readme.txt
src/: interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
src/commands/: input-codes.h  input.h  print.h
src/kernel/: main.c  main.h
src/x86_64/: input.c  print.c
src/x86_64/boot/: header.asm  main.asm  main64.asm
targets/x86_64/: linker.ld
targets/x86_64/iso/boot/grub/: grub.cfg
tests/: basic_boot.rs  shoud_panic.rs  stack_overflow.rs
