[package]
name = "noodleos"
version = "0.1.0"
edition = "2018"
authors = ["Purplefrizzel"]
documentation = "https://noodleos.purplefrizzel.com/docs"
exclude = ["/docs/*"]
keywords = ["NoodleOS", "os", "operating-system"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/purplefrizzel/NoodleOS"
description = "A 64-bit operating system."

[[test]]
path = "test"
name = "should_panic"
harness = false

[[test]]
path = "test"
name = "stack_overflow"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
